2014-05-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: Update win32_popen() (w32 only).

2014-05-05  Karl Berry  <karl@tug.org>

	* doc/kpathsea.texi,
	* doc/unixtex.texi,
	* README,
	* PROJECTS: omit old information about building and installing;
	general updates (though plenty more could be done).
	
	* BUGS,
	* doc/bugs.texi,
	* doc/hier.texi,
	* doc/install.texi: remove.
	* Makefile.am,
	* doc/Makefile.am: update accordingly.

2014-04-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (normal_headers): Add simpletypes.h.
	* simpletypes.h: Don't '#include <kpathsea/simpletypes.h>'.

2014-04-29  Karl Berry  <karl@tug.org>

	* simpletypes.h: new file, defining just boolean, string, address, etc.
	* pathsearch.h: restore #include of str-llist.h before types.h,
	as it should be.
	* str-llist.h: #include simpletypes.h instead of types.h.
	* types.h: #include simpletypes.h.

2014-04-22  Karl Berry  <karl@tug.org>

	* texmf.cnf (guess_input_kanji_encoding): set to 1,
	per Akira and Norbert.

2014-04-17  Karl Berry  <karl@tug.org>

	* version.ac: 6.2.0 (without the dev) for 2014 pretest.
	* NEWS,
	* texmf.cnf,
	* kpsewhich.c: 2014.

	* texmf.cnf (TEXINPUTS.pdfx{latex,mex,tex}): this engine has
	not existed for a long time.  Remove.
	(TEXINPUTS.luajittex): same as .luatex.

2014-04-09  Karl Berry  <karl@tug.org>

	* pathsearch.h: with deep regret, #include types.h before
	str-llist.h, since otherwise str_llist_type is not defined
	in its use within types.h and a simple #include
	<kpathsea/pathsearch.h> fails.  Reported by Norman Gray,
	tex-k 14 Apr 2013 12:23:50,
	http://tug.org/pipermail/tex-k/2013-April/002496.html

2014-04-09  Luigi Scarso  <luigi.scarso@gmail.com>

	* mingw32.h [MinGW64]: Avoid warning due to redefining popen.

2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac, getopt.h: Revert previous change.
	Cygwin system getopt() is incompatible with the GNU version.
